Remove !important from z-index in failed attempt to fix FF

--- a/sass/ui/_toggles.scss
+++ b/sass/ui/_toggles.scss
@@ -58,7 +58,7 @@
  		@include opacity(0);
  	}
  	&.active {
- 		z-index: 999999 !important;
+ 		z-index: 999999;
  		> .overlay, > .content {
    		@include transition-duration(.5s);
  			@include opacity(1);
